<resources>
    <string name="app_name">Movies</string>
    <string name="error">Error, try again :,(</string>
    <string name="movie">Movie</string>
    <string name="movies_pop">Popular Movies</string>
    <string name="movies_rating">Highest Rating</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="year">Year</string>
    <string name="average">0.0/10</string>
    <string name="movies_favorites">Favorites</string>
    <string name="rating_constant">/10</string>
    <string name="favorite">MARK \nAS FAVORITE</string>
    <string name="disfavor">MARK \nAS DISFAVOR</string>
    <string name="error_favorite">No favorite movies currently available.\nTry changing to another rating from the menu above </string>
    <string name="play">Play Trailer</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed mi metus. In sed nunc nisl. Cras semper massa massa, vel cursus quam efficitur non. Praesent purus ante, euismod a feugiat vitae, bibendum et ex. Integer malesuada varius metus, finibus efficitur erat accumsan id. Pellentesque finibus ligula lacus. Nullam sit amet dolor nisi. Phasellus nec interdum lorem. Aliquam ut mi sed nunc fringilla aliquam. Proin elementum neque ut magna tincidunt convallis. Nunc et purus sit amet enim mattis faucibus nec non dui.</string>
    <string name="action_bar_title_favorite">FAVORITES TITLES</string>
    <string name="action_bar_title_highest">HIGHEST RATED TITLES</string>
    <string name="action_bar_title_popular">POPULAR TITLES</string>
</resources>
