<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="rmagalhaes.com.br.filmesfamosos.DetailActivity">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            card_view:cardUseCompatPadding="true"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp"
            android:layout_gravity="top">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="match_parent">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        card_view:cardCornerRadius="5dp"
                        android:layout_gravity="center">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/movie"
                            android:scaleType="centerCrop"
                            android:id="@+id/movie_card"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:layout_alignEnd="@+id/movie_card"
                            android:background="@color/whiteTrans" />
                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="start"
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/title"/>

                        <TextView
                            android:id="@+id/year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/year"/>

                        <RatingBar
                            android:layout_marginTop="10dp"
                            android:id="@+id/ratingBar"
                            style="?android:attr/ratingBarStyleSmall"
                            android:isIndicator="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="10"
                            android:stepSize="1.0"
                            android:rating="0"/>

                        <TextView
                            android:id="@+id/average"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/average"/>

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/overview"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/overview"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

</merge>
